# bart-plugin

./: .pre-commit-config.yaml  .ruff.toml  PRE_COMMIT.md  README.md  example_bart_usage.py  example_florence2_usage.py  example_nllb_usage.py  example_t5gemma2_usage.py  example_usage.py  pyproject.toml  setup.py  verify_plugin.py
scripts/: README.md  bump_version.py  eval_cnn_dailymail.py
tests/: README.md  __init__.py  conftest.py  test_florence2.py  test_model_inference.py  test_model_initialization.py  test_nllb_inference.py  test_nllb_model_structure.py  test_plugin_registration.py  test_vllm_018_compat.py
vllm_bart_plugin/: __init__.py  bart.py  florence2.py  nllb.py  t5gemma2.py
